# Raintower-logic

./: .gitignore  CMakeLists.txt  README.md  STM32WL5x_CM4.svd  Toolchain-arm-gcc.cmake  compiler_flags.cmake  paths_and_defines.cmake
logic/TaskScheduler/: project.yml
logic/TaskScheduler/src/: TS_TimeStruct_t.h  TaskSchedulerMain.c  TaskSchedulerMain.h  TimeStructCalc.c  TimeStructCalc.h
logic/TaskScheduler/test/: test_TaskSchedulerMain.c  test_TaskScheduler_Init.c  test_TaskScheduler_Run.c  test_TimeStructCalc.c
platform/Inc/: System.h  debug.h  main.h  pinDictionary.h
platform/Src/: System.c  debug.c  main.c  stm32wlxx_it.c
